C2_Package_Manager/code/yaml_files/frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
    labels:
        app: frontend
spec:
    type: NodePort
    ports:
    - port: 5000
      nodePort: 30010
      protocol: TCP
    selector:
        app: frontend
